// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerNotification renders correctly 1`] = `
<div
  className="wds-banner-notification wds-message "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - messge
  </span>
  <div
    className="wds-banner-notification__close"
    onClick={[Function]}
  />
</div>
`;

exports[`BannerNotification renders correctly 2`] = `
<div
  className="wds-banner-notification wds-success "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - success
  </span>
  <div
    className="wds-banner-notification__close"
    onClick={[Function]}
  />
</div>
`;

exports[`BannerNotification renders correctly 3`] = `
<div
  className="wds-banner-notification wds-warning "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - warning
  </span>
  <div
    className="wds-banner-notification__close"
    onClick={[Function]}
  />
</div>
`;

exports[`BannerNotification renders correctly 4`] = `
<div
  className="wds-banner-notification wds-alert "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - alert
  </span>
  <div
    className="wds-banner-notification__close"
    onClick={[Function]}
  />
</div>
`;

exports[`BannerNotification renders correctly 5`] = `
<div
  className="wds-banner-notification wds-message "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
  >
    <em>
      Note
    </em>
    : this is html.
  </span>
  <div
    className="wds-banner-notification__close"
    onClick={[Function]}
  />
</div>
`;

exports[`BannerNotification renders correctly 6`] = `
<div
  className="wds-banner-notification wds-message "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Some text with <strong>html</strong>",
      }
    }
  />
  <div
    className="wds-banner-notification__close"
    onClick={[Function]}
  />
</div>
`;

exports[`BannerNotification renders correctly without action 1`] = `
<div
  className="wds-banner-notification wds-message "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - messge
  </span>
  <div
    className="wds-banner-notification__close"
    onClick={null}
  />
</div>
`;

exports[`BannerNotification renders correctly without action 2`] = `
<div
  className="wds-banner-notification wds-success "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - success
  </span>
  <div
    className="wds-banner-notification__close"
    onClick={null}
  />
</div>
`;

exports[`BannerNotification renders correctly without action 3`] = `
<div
  className="wds-banner-notification wds-warning "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - warning
  </span>
  <div
    className="wds-banner-notification__close"
    onClick={null}
  />
</div>
`;

exports[`BannerNotification renders correctly without action 4`] = `
<div
  className="wds-banner-notification wds-alert "
>
  <div
    className="wds-banner-notification__icon"
  >
    <div
      className="wds-banner-notification__icon-mark"
    />
  </div>
  <span
    className="wds-banner-notification__text"
  >
    lorem ipsum - alert
  </span>
  <div
    className="wds-banner-notification__close"
    onClick={null}
  />
</div>
`;
